; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_draw.c_DrawTilesFromCacheShPrep.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_draw.c_DrawTilesFromCacheShPrep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HighCol = common dso_local global i64 0, align 8
@PDRAW_SHHI_DONE = common dso_local global i32 0, align 4
@rendstatus = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @DrawTilesFromCacheShPrep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DrawTilesFromCacheShPrep() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  store i32 80, i32* %1, align 4
  %3 = load i64, i64* @HighCol, align 8
  %4 = add nsw i64 %3, 8
  %5 = inttoptr i64 %4 to i32*
  store i32* %5, i32** %2, align 8
  %6 = load i32, i32* @PDRAW_SHHI_DONE, align 4
  %7 = load i32, i32* @rendstatus, align 4
  %8 = or i32 %7, %6
  store i32 %8, i32* @rendstatus, align 4
  br label %9

9:                                                ; preds = %13, %0
  %10 = load i32, i32* %1, align 4
  %11 = add nsw i32 %10, -1
  store i32 %11, i32* %1, align 4
  %12 = icmp ne i32 %10, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %9
  %14 = load i32*, i32** %2, align 8
  %15 = getelementptr inbounds i32, i32* %14, i32 1
  store i32* %15, i32** %2, align 8
  %16 = load i32, i32* %14, align 4
  %17 = and i32 %16, -1077952577
  store i32 %17, i32* %14, align 4
  br label %9

18:                                               ; preds = %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
